samples/_failures_safe/1761549000_41d9d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dbacae9.c: In function ‘main’:
./samples/SAFE/__tmp_2dbacae9.c:154:35: error: expected ‘;’ at end of input
  154 |     for (int i = 0; i < edge_count
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_2dbacae9.c:154:5: error: expected declaration or statement at end of input
  154 |     for (int i = 0; i < edge_count
      |     ^~~
